# crucible

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: env-dev.md  rlvr-trainer.md  verifier-dev.md
.claude/commands/: eval-env.md  lint.md  test.md
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
analysis/: CLAUDE.md  README.md  __init__.py
docs/: DESIGN.md  ROADMAP.md
environments/infra_synth/: CLAUDE.md  README.md  __init__.py  infra_synth.py  parser.py  pyproject.toml
environments/infra_synth/infra_synth/: __init__.py  environment.py  gold.py  impossible.py  parser.py  scaffold.py  tasks.py
eval/: CLAUDE.md  README.md  __init__.py  benchmark.py  c3_study.py
scripts/: setup.sh
tests/: CLAUDE.md  test_backends.py  test_c3_study.py  test_checks.py  test_contracts.py  test_gold.py  test_impossible.py  test_infra_env_integration.py  test_infra_reward.py  test_parser.py  test_reward.py  test_scaffold.py  test_sentinel_client.py  test_tasks.py  test_training_data.py  test_training_rewards.py  test_training_seeds.py
training/: CLAUDE.md  README.md  __init__.py  data.py  rewards.py  run.py  seeds.py
training/configs/: m1_gsm8k.toml  m1_repro.yaml  m1_reverse_text.toml  m2_infra_sentinel.toml  m2_sentinel.yaml
verifier/: CLAUDE.md  README.md  __init__.py  backends.py  pyproject.toml  reward.py  sentinel_client.py  types.py
verifier/smoke/: checks.py
verifier/verifier/: __init__.py  backends.py
verifier/verifier/smoke/: __init__.py  checks.py
