[project]
name = "crucible"
version = "0.1.0"
description = "Crucible — a security-hardened RL-environment framework for RLVR (Reinforcement Learning with Verifiable Rewards) training, with a pluggable verifier layer (local Docker | Sentinel sandbox)."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "crucible-verifier",
    "httpx>=0.27",
    "pyyaml>=6",
    "rich>=13",
]

[project.optional-dependencies]
# Heavy / GPU-oriented training stack. NOT part of the core install.
train = [
    "verifiers>=0.1.14",
    "vllm",
    "wandb",
    "datasets",
]
# Lightweight developer tooling (CPU-only).
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The `crucible` dev package is assembled from the top-level source dirs.
[tool.hatch.build.targets.wheel]
packages = ["training", "eval", "analysis"]

# ---------------------------------------------------------------------------
# uv workspace
# ---------------------------------------------------------------------------
[tool.uv.workspace]
members = ["verifier", "environments/infra_synth"]

[tool.uv.sources]
crucible-verifier = { workspace = true }
infra-synth = { workspace = true }

# ---------------------------------------------------------------------------
# tooling config
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# verifier/types.py is a FROZEN CONTRACT written verbatim; consumers depend on
# its exact shape, so we do not let the linter rewrite it:
#   UP042 -> would change `class ArtifactKind(str, Enum)` to StrEnum.
#   E501  -> a single long line in a docstring.
"verifier/types.py" = ["UP042", "E501"]
# `vf` (verifiers) is a TYPE_CHECKING-only import, so the return annotation MUST
# stay quoted; UP037 would (incorrectly) strip the quotes and break runtime.
"environments/infra_synth/infra_synth.py" = ["UP037"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = false
