[project]
name = "crucible-verifier"
version = "0.1.0"
description = "Dependency-light, backend-agnostic verifier contracts and pluggable backends (local Docker / Sentinel sandbox) for the Crucible RLVR framework."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["py.typed"]
